# eww-data-provider

enums/: Cargo.toml
enums/src/: lib.rs
eww-data-provider/: Cargo.toml
eww-data-provider/src/: backlight.rs  battery.rs  bluetooth.rs  consts.rs  dunst.rs  eink.rs  eink_listener.rs  listener.rs  main.rs  requests.rs  settingsmenu.rs
eww-data-requester/: Cargo.toml
eww-data-requester/src/: main.rs
