[package]
name = "eww-data-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
lazy_static = "1.4.0"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive"] }
enums = { path = "../enums" }
